// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with point = 99999 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 5,
      "height": 300,
      "margin": 16,
      "paddingHorizontal": 8,
      "paddingVertical": 16,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 2,
      "width": 150,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/asset/challenge1.jpeg",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "maxHeight": 120,
        "width": 100,
      }
    }
  />
  <View
    style={
      Object {
        "marginTop": 16,
      }
    }
  >
    <Text
      numberOfLines={3}
      style={
        Object {
          "color": "#333333",
          "fontWeight": "700",
          "width": "100%",
        }
      }
    >
      Advanced Health Screening
    </Text>
    <Text
      numberOfLines={3}
      style={
        Object {
          "color": undefined,
          "fontWeight": "300",
          "marginTop": 8,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginTop": 32,
        }
      }
    >
      <Text
        style={
          Object {
            "width": "70%",
          }
        }
      >
        Earn up to 
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          99999
        </Text>
         pts
      </Text>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#EB596E",
              "fontSize": 24,
            },
            undefined,
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders without point 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 5,
      "height": 300,
      "margin": 16,
      "paddingHorizontal": 8,
      "paddingVertical": 16,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 2,
      "width": 150,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/asset/challenge1.jpeg",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "maxHeight": 120,
        "width": 100,
      }
    }
  />
  <View
    style={
      Object {
        "marginTop": 16,
      }
    }
  >
    <Text
      numberOfLines={3}
      style={
        Object {
          "color": "#333333",
          "fontWeight": "700",
          "width": "100%",
        }
      }
    >
      Advanced Health Screening
    </Text>
    <Text
      numberOfLines={3}
      style={
        Object {
          "color": undefined,
          "fontWeight": "300",
          "marginTop": 8,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "marginTop": 32,
        }
      }
    >
      <Text
        style={
          Object {
            "width": "70%",
          }
        }
      >
        Earn up to 
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          0
        </Text>
         pts
      </Text>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#EB596E",
              "fontSize": 24,
            },
            undefined,
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
